added some features

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,12 +8,13 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/nav_host_fragment"
+        android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:name="androidx.navigation.fragment.NavHostFragment"
-        app:navGraph="@navigation/main_navigation"
         app:defaultNavHost="true"
-        tools:layout="@layout/create_dish_fragment" />
+        app:navGraph="@navigation/main_navigation" />
+    <!--        tools:layout="@layout/login_fragment"-->
+
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navigationView"
