--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -39,7 +39,7 @@
             android:id="@+id/etUserName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/user_name_hint"
+            android:hint="@string/enter_your_email"
             android:inputType="textCapWords" />
     </com.google.android.material.textfield.TextInputLayout>
 
