--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -7,6 +7,7 @@
             <item android:id="@+id/redList" android:icon="@drawable/ic_launcher_background" android:title="Red List"></item>
             <item android:id="@+id/dishList" android:icon="@drawable/ic_launcher_background" android:title="Dish List"></item>
             <item android:id="@+id/createDish" android:icon="@drawable/ic_launcher_background" android:title="@string/text_create_dish"></item>
+            <item android:id="@+id/logout" android:icon="@drawable/ic_launcher_background" android:title="@string/text_logout"></item>
         </menu>
     </item>
 
